# CMake_template

./: CMakeLists.txt  COPYRIGHT  README  README.md  main.cpp
cmake/: ProjectXXConfig.cmake.in
lib/: authority.h  projectname.h
lib/Module1/: filename.h  module1.cpp  module1.h
src/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  authority.h  filename.cpp  filename.h  projectname.h
src/lib/filename/: filename.cpp  filename.h
